# PhD_Assessment1

./: .gitignore  .gitmodules  README.md
compare/: compare.py
cpp/: CMakeLists.txt  README.md
cpp/inc/: CClassifier.h  CStringFormatter.h  CTensor.h  CTensorBase.h  GlobalHelpers.h
cpp/src/: CClassifier.cpp  CTensorBase.cpp  GlobalHelpers.cpp  Inference.cpp  Main.cpp
dumps/: confirmation.npy
python/: question1v1.py
